--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Exámen Sanborns</p>
+            <p>&copy; @DateTime.Now.Year - Exámen Sanborns Mejorado</p>
         </footer>
     </div>
 
